[GOBBLIN-707]-rewrite gobblin script combining all gobblin modes and commands along with configs